fixed extreme cases for buttons

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
                     </div>
                 </li>
             </ul>
-
+            <button
+            @click='previousPage'>
+                Pagina precedente
+            </button>
             <button
             @click='nextPage'>
                 Pagina successiva
